[package]
name = "thriftpy2"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
serde_json = "1.0"

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "rust_apache_json"  # private module to be nested into Python package
path = "thriftpy2/protocol/rust_apache_json.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
